# philips_to_ismrmrd

./: .gitignore  CMakeLists.txt  IsmrmrdPhilips.xsl  LICENSE  README.md  decode_notes.md  main.cpp  philips.h  read_philips_decompilation.cpp  sinxml.cpp
